--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -24,6 +24,19 @@ body {
   font-weight: 300;
   text-decoration: none;
 
+  ::-webkit-scrollbar {
+    width: 6px;
+  }
+  ::-webkit-scrollbar-track {
+    background: #2e284e;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #febe00;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: #c39200;
+  }
+
   * {
     margin: 0;
     padding: 0;
@@ -32,6 +45,8 @@ body {
     font-weight: inherit;
     text-decoration: inherit;
     font-family: 'Roboto', sans-serif;
+
+    box-sizing: border-box;
   }
 
   a {
@@ -56,10 +71,10 @@ body {
       margin: auto;
       padding: 40px;
 
-      max-width: 1000px;
+      max-width: 1400px;
 
       @media (max-width: $mobileRes) {
-        padding: 20px;
+        padding: 10px;
       }
 
       .section {
